# cosmicterm

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: application.rs  main.rs  pty.rs  terminal.rs  window.rs
