[package]
name = "cosmicterm"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "25.0.2"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
glyphon = "0.9.0"
pollster = "0.4.0"
chrono = "0.4.41"
portable-pty = "0.9.0"
polling = "3.8.0"
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
vte = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
